added some more methods and finished the framework

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>testingRetry</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>homePageWithThreeSlidersOnly</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -27,6 +31,10 @@
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>getDriver</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
