--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,5 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>tests.homePageTest.homePageWithThreeSlidersOnly</td></tr>
+<tr><td>tests.homePageTest.homePageImagesInArrivalsShouldNavigate</td></tr>
 <tr><td>tests.homePageTest.homePageWithThreeArrivalsOnlyTest</td></tr>
 </table>
