--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97cf6d">  <td>24/03/14 22:27:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="homePageTest.homePageImagesInArrivalsShouldNavigate()[pri:0, instance:tests.homePageTest@5560bcdf]">homePageImagesInArrivalsShouldNavigate</td> 
-  <td>main@379115456</td>   <td></td> </tr>
+<tr bgcolor="97cf6d">  <td>24/03/18 21:57:39</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardDown()[pri:0, instance:tests.homePageTest@5032714f]">&lt;&lt;teardDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@704106237</td>   <td></td> </tr>
+<tr bgcolor="97cf6d">  <td>24/03/18 21:56:33</td>   <td>-65765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.getDriver()[pri:0, instance:tests.homePageTest@5032714f]">&gt;&gt;getDriver</td> 
+<td>&nbsp;</td>  <td>main@704106237</td>   <td></td> </tr>
+<tr bgcolor="7cfad4">  <td>24/03/18 21:57:39</td>   <td>-125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="homePageTest.testingRetry()[pri:0, instance:tests.homePageTest@5032714f]">testingRetry</td> 
+  <td>main@704106237</td>   <td></td> </tr>
 </table>
